--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
             <div class="col-md-3">
                 <p class="lead">Diretórios</p>
                 <div class="list-group">
+                  <a ng-href="#!/list/todos" class="list-group-item active">todos</a>
                     <a ng-href="#!/list/success" class="list-group-item active">success</a>
-                    <a ng-href="#!/list/output" class="list-group-item">output</a>
+                    <a ng-href="#!/list/output" class="list-group-item active">output</a>
                 </div>
             </div>
 
@@ -73,11 +74,7 @@
         </div>
 
     </div>
-    <script>
-   $( ".list-group list-group-item" ).click(function() {
-   $( this ).toggleClass( "active" );
-   });
-</script>
+
     <!-- /.container -->
 
     <!-- /.container -->
