--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                   <a ng-href="#!/list/todos" class="list-group-item active">todos</a>
                     <a ng-href="#!/list/success" class="list-group-item active">success</a>
                     <a ng-href="#!/list/output" class="list-group-item active">output</a>
+                    <a ng-href="#!/list/chargeback" class="list-group-item active">chargeback</a>
                 </div>
             </div>
 
